apps/base/dumbdo/dumbdo-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dumbdo-ingressroute
  namespace: dumbdo
  annotations:
    gethomepage.dev/href: "https://dumbdo.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "DumbDo"
    gethomepage.dev/description: "Simple TODO list"
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons@main/svg/dumbdo.svg"
spec:
  entryPoints: [websecure, web]
  routes:
    - match: Host(`dumbdo.lab.mainertoo.com`)
      kind: Rule
      # middlewares:
      #   - name: authentik-sso
      #     namespace: traefik-system
      services:
        - name: dumbdo
          port: 3000
          scheme: http
  tls: {}
